# enso_eval

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CITATION.cff  CPPLINT.cfg  README.md  dut_setup.sh  experiment.py  paper_plots.py  requirements.txt  sample_experiment_config.toml  set_constants.py  setup.sh  usenix.sty
dpdk_echo/: CMakeLists.txt  README.md
dpdk_echo/src/: CMakeLists.txt  dpdk_echo.cpp
log_monitor/: .gitignore  CMakeLists.txt  README.md  fail2ban_services.txt  package_statistics.txt
log_monitor/log_regex/: apache_regex.txt  dovecot_regex.txt  exim_regex.txt  mysql_regex.txt  nginx_regex.txt  pam_regex.txt  postfix_regex.txt  selinux_regex.txt  sieve_regex.txt  sshd_regex.txt
log_monitor/src/: CMakeLists.txt  build_regex_database.cpp  build_regex_database.hpp  dpdk_log_monitor.cpp  enso_log_monitor.cpp  generate_pcap_from_log.cpp  log_monitor.hpp  test_log_monitor.cpp
log_monitor/tools/: extract_fail2ban_regex.py
maglev/: .gitignore  CMakeLists.txt  README.md
maglev/cmake/: Finddpdk.cmake
maglev/src/: CMakeLists.txt  dpdk_maglev.cpp  enso_maglev.cpp  maglev.hpp  test_maglev.cpp
mica2/: CMakeLists.txt  README.md
mica2/cmake/: Finddpdk.cmake
mica2/src/mica/datagram/: datagram_client.h  datagram_client_impl.h  datagram_protocol.h  datagram_server.h  datagram_server_impl.h
mica2/src/mica/directory/etcdcpp/: etcd_mod.h
mica2/src/mica/network/: network_addr.h
mica2/src/mica/network/dpdk/: dpdk.h  dpdk_impl.h
mica2/src/mica/network/enso/: enso.h  enso_impl.h
mica2/src/mica/test/: config_client.py  config_server.py  netbench.cc  server.cc
nitrosketch/: CMakeLists.txt  README.md  constants.h  dpdk_nitrosketch.cpp  enso_nitrosketch.cpp  geometric.h  minheap.cpp  minheap.h  nitrosketch.h  xxhash.h
pktcopy/: CMakeLists.txt  dpdk_pktcpy.cc  enso_pktcpy.cc  enso_userlib.cc  enso_userlib.h
tools/ddio-bench/: Makefile  change-ddio.c
